# powermoniter

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
Caddy/: Caddyfile  docker-compose.yml
apps/adapters/: base.py  mqtt_adapter.py  tcp_adapter.py  tests.py
apps/api/: errors.py
apps/api/dependencies/: security.py
apps/api/routes/: __init__.py  auth.py  dead_letters.py  device_api.py  devices.py  ops.py
apps/api/routes/tests/: __init__.py  test_auth.py  test_device_api_electricity.py  test_device_api_list.py  test_devices_admin.py  urls.py
apps/repositories/: admin.py  dead_letter_repository.py  device_repository.py  models.py
apps/repositories/management/commands/: export_reading.py  peek_reading_export.py
apps/repositories/migrations/: 0001_initial.py
apps/schemas/: auth.py  device_api.py  devices.py
apps/services/: auth_service.py  device_api_service.py  ingestion_service.py  mqtt_config.py  mqtt_publish_service.py  subscription_manager.py
apps/subscribers/: registry.py  retry.py
apps/telemetry/: logging.py  metrics.py
docs/api/: auth-login.md  device-admin.md  device-api.md
openspec/: project.md
openspec/changes/archive/2025-11-12-add-device-api-tests/: proposal.md  tasks.md
openspec/changes/archive/2025-11-12-add-device-electricity-tests/: proposal.md  tasks.md
openspec/specs/auth/: spec.md
openspec/specs/device-admin/: spec.md
openspec/specs/device-api/: spec.md
powermoniter/: asgi.py  settings.py  urls.py  wsgi.py
utils/: csrf_middleware.py
(+19 files in other folders)
